--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,12 @@ highlighter:         pygments
 
 # Permalinks
 permalink:           /:title
-relative_permalinks: true
 
 # Setup
 timezone:            your timezone # eg. Asia/Kathmandu
 locale:              your locale language # eg. en_us
-name:				         site name
-title:               site title
+name:				         1001 arts
+title:               1001 arts
 tagline:             'tagline'
 description:         'description'
 url:                 site url
@@ -43,10 +42,17 @@ destination:      	 ./_site
 exclude:          	 [".editorconfig", ".gitignore", "bower.json", "composer.json", "CONTRIBUTING.md", "CNAME", "LICENSE", "Gruntfile.js", "package.json", "node_modules", "README.md", "sass", "haml"]
 port:             	 9001
 
-defaults:
-  -
-    scope:
-      path: "_posts"
-      type: "posts"
-    values:
-      layout: "default"
+---
+layout:           post
+title:            "your post title"
+date:             2015-02-11T13:04:19+05:45 # XML Schema Date/Time
+last_modified_at: 2015-03-15T05:20:00+05:45 # last page modified date/time
+excerpt:          "for meta description" # Optional for overwriting content excerpt
+categories:       your post categories # ["category1"] - best is to have one category in a post
+tags:             your post tags # ["tag1", "tag2", "tag3"] - you can have several post tags
+image:
+  feature: your post featured image file name # image.jpg, suggested size:  2000x700px
+  topPosition: 0px # top position for featured image if needed
+bgContrast: dark # Featured image contrast
+bgGradientOpacity: darker # darker or lighter - control featured image opacity
+---
